apply plugin: 'java'
apply plugin: 'me.tatarka.retrolambda'

dependencies {
    compile fileTree(dir: 'libs', include: ['*.jar'])

    compile project(':iothub-java-common')

    // From https://github.com/Azure/azure-iot-sdks/blob/master/java/service/iothub-service-sdk/pom.xml
    compile 'com.google.code.gson:gson:2.5'
    compile 'org.glassfish:javax.json:1.0.4'
    //compile 'commons-codec:commons-codec:1.10'
    compile 'org.apache.qpid:proton-j:0.11.1'
}

compileJava {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

retrolambda {
    jdk JAVA8_HOME
    oldJdk JAVA7_HOME
    javaVersion JavaVersion.VERSION_1_7
    //jvmArgs '-noverify'
    //defaultMethods true
}
